--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,13 @@ dependencies {
     compile 'net.java.dev.jna:jna:4.2.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
+}
